// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage should render with all switches off 1`] = `
<Card
  raised={false}
>
  <WithStyles(CardContent)>
    <WithStyles(Typography)
      component="h2"
      gutterBottom={true}
      variant="headline"
    >
      Paramètres
    </WithStyles(Typography)>
    <WithStyles(List)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Notifications bureau de rappel pour le CRA"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={false}
            disabled={true}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Popup rappel titre de transport"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={false}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Afficher les tutoriels"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={false}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(CardContent)>
</Card>
`;

exports[`SettingsPage should render with all switches on 1`] = `
<Card
  raised={false}
>
  <WithStyles(CardContent)>
    <WithStyles(Typography)
      component="h2"
      gutterBottom={true}
      variant="headline"
    >
      Paramètres
    </WithStyles(Typography)>
    <WithStyles(List)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Notifications bureau de rappel pour le CRA"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={true}
            disabled={false}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Popup rappel titre de transport"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={true}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
      <WithStyles(ListItem)>
        <WithStyles(ListItemText)
          primary="Afficher les tutoriels"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(Switch)
            checked={true}
            onChange={[MockFunction]}
          />
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(CardContent)>
</Card>
`;
